--- a/app/assets/stylesheets/colors.css
+++ b/app/assets/stylesheets/colors.css
@@ -1,17 +1,17 @@
-font-orange{color: #ED694C;}
-bkg-orange{background-color: #ED694C;}
+.font-orange{color: #ED694C;}
+.bkg-orange{background-color: #ED694C;}
 
-font-violet{color: #5B1633;}
-bkg-violet{background-color: #5B1633;}
+.font-violet{color: #5B1633;}
+.bkg-violet{background-color: #5B1633;}
 
-font-white{color: #FFFEFE;}
-bkg-white{background-color: #FFFEFE;}
+.font-white{color: #FFFEFE;}
+.bkg-white{background-color: #FFFEFE;}
 
-font-light-grey{color: #F8F7F7;}
-bkg-light-grey{background-color: #F8F7F7;}
+.font-light-grey{color: #F8F7F7;}
+.bkg-light-grey{background-color: #F8F7F7;}
 
-font-med-grey{color: #A0A0A0}
-bkg-med-grey{background-color: #A0A0A0}
+.font-med-grey{color: #A0A0A0}
+.bkg-med-grey{background-color: #A0A0A0}
 
-font-dark-grey{color: #494848}
-bkg-dark-grey{background-color: #494848}
+.font-dark-grey{color: #494848}
+.bkg-dark-grey{background-color: #494848}
